@@ -37,8 +37,8 @@ from os.path import isfile, isdir
 from os import umask, popen, system
 
 program = 'oms2v2d'
-version = '1.10'
-verdate = '20200227'
+version = '1.11'
+verdate = '20200331'
 author = 'Walter Brisken'
 
 def usage(pgm):
@@ -194,6 +194,27 @@ def getMachineFromFilelist(filelistFile):
 	except:
 		return None
 
+# This determines if new VLBA station positions are in use
+# If so, assume sched 11.6 (or newer) is in use and that new model should be used
+def isNew(fn):
+	if not isfile(fn) and fn[-4:] == '.obs':
+		fn = fn[:-4]
+	if not isfile(fn):
+		print('Warning: vex file not found; assuming new delay model.\n')
+		return True
+		
+	cmd = 'vexpeek -c %s' % fn
+	data = popen(cmd).readlines()
+	n = 0
+	ants = ['BR', 'FD', 'HN', 'KP', 'LA', 'MK', 'NL', 'OV', 'PT', 'SC']
+	for d in data:
+		s = d.strip().split()
+		if len(s) == 8:
+			epoch = float(s[7])
+			if epoch > 58848.5 and s[0] in ants:
+				n += 1
+	return (n > 0)
+
 def writev2d(oms, v2dFile, prefix, nrt, filebased, datacopyFormat, evlbiType, nStream, verbose):
 	machineMap = {'BR':'swc001', 'FD':'swc002', 'HN':'swc003', 'KP':'swc004', 'LA':'swc005', 'MK':'swc006', 'NL':'swc007', 'OV':'swc008', 'PT':'swc009', 'SC':'swc010', 'Y':'swc011', 'GB':'swc012'}
 	machineMapEVLBI = {'BR':'swc011', 'FD':'swc012', 'HN':'swc013', 'KP':'swc014', 'LA':'swc015', 'MK':'swc016', 'NL':'swc017', 'OV':'swc018', 'PT':'swc019', 'SC':'swc020', 'Y':'swc009', 'GB':'swc008'}
@@ -243,6 +264,8 @@ def writev2d(oms, v2dFile, prefix, nrt, filebased, datacopyFormat, evlbiType, nS
 
 	if nrt or (datacopyFormat != None) or (evlbiType != None):
 		out.write('delayModel = difxcalc+met\n\n')
+	elif isNew(vexFile):
+		out.write('delayModel = difxcalc\n\n')
 
 	if nrt or filebased or (datacopyFormat != None) or (evlbiType != None):
 		machineString = 'swc000, swc001, swc002, swc003, swc004, swc005, swc006, swc007, swc007, swc009, swc010'
